--- a/lesson2/cycle/8.html
+++ b/lesson2/cycle/8.html
@@ -15,17 +15,17 @@
         //      8) Вывести на экран столько элементов ряда Фибоначчи, сколько указал пользователь. Например, если на ввод поступило число 6, 
         // то вывод должен содержать шесть первых чисел ряда Фибоначчи: 1 2 3 5 8 13.
 
-        var a1 = 1,
-            a2 = 1,
-            ax = 0;
+        var sum = 0,
+            a1 = 0,
+            a2 = 1;
 
-        for (var i = 0; i < 6; i++) {
-            ax = a1+a2;
-            a1 = a2;
-            a2 = ax;
-            console.log(ax);
+        for (var i = 1; i <= 6; i++) {
+            sum = a1+a2;
+            a2 = sum;
+            a1 = sum-a1;
+            console.log(sum);
         }
-
+        
 
     </script>
 </body>
