--- a/lesson2/cycle2/5.html
+++ b/lesson2/cycle2/5.html
@@ -16,7 +16,23 @@
         // 1) известно, что пятерки имеют не все ученики класса;
         // 2) допускается, что пятерки могут иметь все ученики класса.
 
-        
+        var students = +prompt('Введите количество учеников:'),
+            score, k = 0, str = '';
+
+        for (var i = 1; i <= students; i++) {
+
+            score = +prompt('Оценка ' + i + '-ученика');
+
+            str += score + ' ';
+            while (score == 5) {
+                k++;
+                break;
+            }
+
+        }
+        alert(k + '-ученик(а) имеют по информатике оценку «5»');
+
+
     </script>
 </body>
 
