--- a/lesson2/cycle2/12.html
+++ b/lesson2/cycle2/12.html
@@ -30,10 +30,10 @@
             start = 10;
             sum = start;
 
-        do{
-            start = start*1.01;
-            i++
-        } while(start<20)
+        // do{
+        //     start = start*1.01;
+        //     i++
+        // } while(start<20)
 
         do{
             start = start*1.01;
