--- a/lesson2/cycle2/9.html
+++ b/lesson2/cycle2/9.html
@@ -15,6 +15,23 @@
         // 9. Известны данные о росте 15 юношей класса, упорядоченные по убыванию. Нет ни одной пары учеников, имеющих одинаковый рост. В начале учебного года в класс поступил новый ученик. Какое место в перечне ростов займет рост этого ученика? Известно, что его рост не совпадает с ростом ни одного из учеников класса, превышает рост самого низкого ученика и меньше роста самого высокого. Условный оператор не использовать.
 
         
+        var students = +prompt('Введите количество учеников:')
+        var newHeight = +prompt('Рост нового ученика:')
+
+        var height, k = 1, str = '';
+        
+        for (var i = 1; i <= students; i++) {
+
+            height = +prompt('Рост ' + i + '-ученика');
+
+            str += height + ' ';
+            while (height > newHeight) {
+                k++;
+                break;
+            }
+
+        }
+        alert('из всех учеников с ростом -> ' + str + ' новый ученик с ростом ' + newHeight + ' занимает ' + k + '-место в ряду');
 
 
 
