--- a/lesson3/array/2.html
+++ b/lesson3/array/2.html
@@ -10,15 +10,16 @@
 
 <body>
 
-
     <script>
-        //    11) Вводится строка, состоящая из слов, разделенных пробелами. Требуется посчитать количество слов в ней.
+        // 2) Даны два массива: ['a', 'b', 'c'] и [1, 2, 3]. Объедините их вместе.
+
+        var arr1 = ['a', 'b', 'c'],
+            arr2 = [1, 2, 3],
+            arr3 = arr1.concat(arr2);
 
 
-        
-        console.log('!'.toUpperCase() == '!');
 
-
+        console.log(arr3);
     </script>
 </body>
 
