--- a/lesson3/array/18.html
+++ b/lesson3/array/18.html
@@ -16,11 +16,11 @@
 
 
 
-        function getRandom(min, max, loop = 10) {
+        function getRandom(min, max, n = 10) {
             var tempArr = [],
                 rand;
 
-            for (var i = 0; i < loop; i++) {
+            for (var i = 0; i < n; i++) {
                 rand = Math.floor(min + Math.random() * (max - min + 1));
                 tempArr.push(rand);
             }
