--- a/lesson3/array2/6.html
+++ b/lesson3/array2/6.html
@@ -28,7 +28,10 @@
                     break;
                 } 
             }
-            console.log('арифметическая прогрессия ' + isArProgression);
+            if(isArProgression){
+                console.log(`Это арифметическая прогрессия, разность = ${arr1[1]-arr1[0]} `);
+            } else console.log('не образуют');
+            
         }
         console.log(arr1);
         someFun(arr1);
